# basic-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/basic_framework/: __init__.py  ext_filesystem.py  ini_config_file.py  logging.py  logging_object.py  proc_frame.py
src/basic_framework/conditions/: condition.py  condition_and.py  condition_equals.py  condition_not.py  condition_or.py
src/basic_framework/container_utils/: abstract_container.py  abstract_iterator.py  container_distinct.py  container_in_memory.py  container_simple_indexed.py  container_unique_indexed.py  knot_object.py  markdown_file_as_table.py  static_container_basics.py  text_file_as_table.py
src/basic_framework/database/: __init__.py  abstract_database.py  database_container.py  database_iterator.py  ms_access_db.py  sqlite_db.py
src/basic_framework/utils/: basic_utils.py  filename_utils.py  markdown_document.py
tests/: conftest.py  test_basic_imports.py  test_basic_utils.py  test_conditions.py  test_container_in_memory.py  test_database.py  test_env_variables.py  test_ext_filesystem.py  test_ini_config_file.py  test_logging_object.py  test_proc_frame.py  test_proc_frame_config.py  test_proc_frame_console_only.py  test_text_file_as_table.py
