[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "basic-framework"
version = "3.4.5"
description = "Python framework with containers, conditions, and file operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [ "framework", "logging", "configuration", "containers", "ini", "database",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13",]
dependencies = []
[[project.authors]]
name = "Hennig IT Consulting GmbH"
email = "contact@hennig-it-consulting.de"

[project.optional-dependencies]
msaccess = [ "pyodbc",]
dev = [ "pytest>=7.0.0", "pyright>=1.1.0",]

[project.urls]
Homepage = "https://github.com/hennig-ai/basic-framework"
Issues = "https://github.com/hennig-ai/basic-framework/issues"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = "warning"

[tool.setuptools.package-data]
basic_framework = [ "*.md", "*.txt", "py.typed",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
addopts = ""

[tool.setuptools.packages.find]
where = [ "src",]
